update post page

--- a/configs/config.json
+++ b/configs/config.json
@@ -1,3 +1,4 @@
 {
-    "siteTitle": "Boris Buliga"
+    "siteTitle": "Boris Buliga",
+    "sourcesRoot": "https://github.com/d12frosted/d12frosted.io/blob/master"
 }
