--- a/configs/config.json
+++ b/configs/config.json
@@ -1,4 +1,10 @@
 {
     "siteTitle": "Boris Buliga",
-    "sourcesRoot": "https://github.com/d12frosted/d12frosted.io/blob/master"
+    "siteUrl": "https://d12frosted.io",
+    "sourcesRoot": "https://github.com/d12frosted/d12frosted.io/blob/master",
+    "authorName": "Boris Buliga",
+    "authorEmail": "boris@d12frosted.io",
+    "feedTitle": "d12frosted",
+    "feedDescription": "A little bit of Haskell. A little bit of Emacs.",
+    "feedSize": 16
 }
