--- a/configs/config.json
+++ b/configs/config.json
@@ -1,13 +1,13 @@
 {
-    "siteTitle": "Boris Buliga",
-    "siteUrl": "https://d12frosted.io",
-    "siteKeywords": "blog,programming,Haskell,Emacs,fish,bash",
-    "gitHubUrl": "https://github.com/d12frosted",
-    "gitHubUrl": "",
-    "sourcesRoot": "https://github.com/d12frosted/d12frosted.io/blob/master",
-    "authorName": "Boris Buliga",
-    "authorEmail": "boris@d12frosted.io",
-    "feedTitle": "d12frosted",
-    "feedDescription": "A little bit of Haskell. A little bit of Emacs.",
-    "feedSize": 16
+  "siteTitle": "Boris Buliga",
+  "siteUrl": "https://d12frosted.io",
+  "siteKeywords": "blog,programming,Haskell,Emacs,fish,bash",
+  "gitLabUrl": "https://gitlab.com/d12frosted",
+  "gitHubUrl": "https://github.com/d12frosted",
+  "sourcesRoot": "https://gitlab.com/d12frosted/d12frosted.io/blob/master",
+  "authorName": "Boris Buliga",
+  "authorEmail": "boris@d12frosted.io",
+  "feedTitle": "d12frosted",
+  "feedDescription": "A little bit of Haskell. A little bit of Emacs.",
+  "feedSize": 16
 }
