--- a/stack.yaml
+++ b/stack.yaml
@@ -15,7 +15,7 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: nightly-2019-03-03
+resolver: lts-12.26
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
