--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,6 +24,7 @@ pages:
       - .stack
   script:
     - stack exec -- d12frosted-io build
+    - cp -r assets/.well-known public/.well-known
   artifacts:
     paths:
       - public
