--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,10 @@
 image: haskell:latest
 
+stages:
+  - build
+  - pages
+  - github
+
 before_script:
   - apt-get update && apt-get install xz-utils make
   - export STACK_ROOT=`pwd`/.stack
@@ -28,5 +33,12 @@ pages:
   artifacts:
     paths:
       - public
+  only:
+    - master
+
+gihub:
+  stage: github
+  script:
+    - .ci/github_push
   only:
     - master
