--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,10 +11,12 @@ stages:
       - .stack
   script:
     - apt-get update
-    - apt-get install -y xz-utils make
     - curl -sL https://deb.nodesource.com/setup_12.x | bash -
-    - apt-get install -y nodejs
-    - npm install bower -g
+    - apt-get install -y xz-utils make nodejs
+    - curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
+    - echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
+    - apt-get update
+    - apt-get install -y yarn
     - export STACK_ROOT=`pwd`/.stack
     - make build
 
