--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,17 +11,19 @@ jobs:
 
     - uses: actions/setup-node@v1.1.0
 
-    - uses: actions/cache@v1
+    - name: .stack-work cache
+      uses: actions/cache@v1
       with:
         path: .stack-work
-        key: ${{ runner.os }}-stack-work
+        key: ${{ runner.os }}-stack-work-${{ hashFiles('stack.yaml.lock') }}
         restore-keys: |
           ${{ runner.os }}-stack-work
 
-    - uses: actions/cache@v1
+    - name: $HOME/.stack cache
+      uses: actions/cache@v1
       with:
         path: ~/.stack
-        key: ${{ runner.os }}-stack
+        key: ${{ runner.os }}-stack-${{ hashFiles('stack.yaml.lock') }}
         restore-keys: |
           ${{ runner.os }}-stack
 
