remove GitLab links

--- a/assets/config.json
+++ b/assets/config.json
@@ -2,9 +2,8 @@
   "siteTitle": "Boris Buliga",
   "siteUrl": "https://d12frosted.io",
   "siteKeywords": "blog,programming,Haskell,Emacs,fish,bash",
-  "gitLabUrl": "https://gitlab.com/d12frosted",
   "gitHubUrl": "https://github.com/d12frosted",
-  "sourcesRoot": "https://gitlab.com/d12frosted/d12frosted.io/blob/master",
+  "sourcesRoot": "https://github.com/d12frosted/d12frosted.io/blob/master",
   "authorName": "Boris Buliga",
   "authorEmail": "boris@d12frosted.io",
   "feedTitle": "d12frosted",
