add chartjs support
With this change it's possible to put the following string in the post (org
mode) file and it will be replaced with a chart:

\#+ATTR_HTML: :file fibonacci-naive.json :type line
\#+ATTR_HTML: :height 100 :yAxisType logarithmic :title Mean execution time per N (in seconds) - logarithmic
\#+begin_criterion
\#+end_criterion

You will see more examples in the upcoming posts

--- a/package.yaml
+++ b/package.yaml
@@ -24,9 +24,12 @@ executables:
       - lens-aeson
       - mtl
       - pandoc
+      - pandoc-types
       - path
       - regex-base
       - regex-tdfa
+      - scientific
+      - shakespeare
       - shakespeare
       - text
       - time
