add criterion config hash to the chart id

--- a/package.yaml
+++ b/package.yaml
@@ -19,6 +19,7 @@ executables:
       - env-extra
       - filepath
       - hakyll
+      - hashable
       - http-conduit
       - lens
       - lens-aeson
