--- a/package.yaml
+++ b/package.yaml
@@ -24,6 +24,7 @@ executables:
       - lens
       - lens-aeson
       - mtl
+      - ordered-containers
       - pandoc
       - pandoc-types
       - path
