--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,18 +13,15 @@ jobs:
       - uses: actions/checkout@v2.3.4
 
       - uses: actions/setup-node@v2.1.2
+      - uses: haskell/actions/setup@v1
+        with:
+          ghc-version: 8.10.4
 
-      - name: .stack-work cache
+      - name: cabal cache
         uses: actions/cache@v2
         with:
-          path: .stack-work
-          key: ${{ runner.os }}-stack-work-${{ hashFiles('stack.yaml.lock') }}
-
-      - name: $HOME/.stack cache
-        uses: actions/cache@v2
-        with:
-          path: ~/.stack
-          key: ${{ runner.os }}-stack-${{ hashFiles('stack.yaml.lock') }}
+          path: dist-newstyle
+          key: ${{ runner.os }}-cabal-cache-${{ hashFiles('d12frosted-io.cabal') }}
 
       - name: Build site
         env:
