--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,11 @@ jobs:
       - name: cabal cache
         uses: actions/cache@v2.1.4
         with:
-          path: dist-newstyle
-          key: ${{ runner.os }}-cabal-cache-${{ hashFiles('d12frosted-io.cabal') }}
+          path: |
+            ~/.cabal/packages
+            ~/.cabal/store
+            dist-newstyle
+            key: ${{ runner.os }}-${{ matrix.ghc }}
 
       - name: Build site
         env:
