--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,22 +9,37 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        ghc:
+          - 8.10.7
+
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Set all tracked file modification times to the time of their last commit
+        run: |
+          rev=HEAD
+          for f in $(git ls-tree -r -t --full-name --name-only "$rev") ; do
+            touch -d $(git log --pretty=format:%cI -1 "$rev" -- "$f") "$f";
+          done
 
       - uses: actions/setup-node@v3
       - uses: haskell/actions/setup@v2.0.0
         with:
-          ghc-version: 8.10.4
+          ghc-version: ${{ matrix.ghc }}
 
-      - name: cabal cache
+      - name: Cache Cabal build artifacts
         uses: actions/cache@v3
         with:
           path: |
-            ~/.cabal/packages
-            ~/.cabal/store
+            ${{ steps.setup-haskell-build-env.outputs.cabal-store }}
             dist-newstyle
-          key: ${{ runner.os }}-${{ matrix.ghc }}
+          key: ${{ runner.os }}-cabal-${{ matrix.ghc }}-${{ hashFiles('cabal.project.freeze') }}
+          restore-keys: |
+            ${{ runner.os }}-cabal-${{ matrix.ghc }}
 
       - name: Build site
         env:
