--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,34 +12,30 @@ jobs:
     strategy:
       matrix:
         ghc:
-          - 8.10.7
+          - 9.0.2
 
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
-      - name: Set all tracked file modification times to the time of their last commit
-        run: |
-          rev=HEAD
-          for f in $(git ls-tree -r -t --full-name --name-only "$rev") ; do
-            touch -d $(git log --pretty=format:%cI -1 "$rev" -- "$f") "$f";
-          done
-
       - uses: actions/setup-node@v3
       - uses: haskell/actions/setup@v2.0.0
         with:
           ghc-version: ${{ matrix.ghc }}
+          enable-stack: true
+          stack-version: 'latest'
 
-      - name: Cache Cabal build artifacts
-        uses: actions/cache@v3
+      - name: Cache Stack build artifacts
+        uses: actions/cache@v2
         with:
           path: |
-            ${{ steps.setup-haskell-build-env.outputs.cabal-store }}
-            dist-newstyle
-          key: ${{ runner.os }}-cabal-${{ matrix.ghc }}-${{ hashFiles('cabal.project.freeze') }}
+            ~/.stack
+            .stack-work
+          # best effort for cache: tie it to Stack resolver and package config
+          key: ${{ runner.os }}-stack-${{ hashFiles('stack.yaml.lock', 'package.yaml') }}
           restore-keys: |
-            ${{ runner.os }}-cabal-${{ matrix.ghc }}
+            ${{ runner.os }}-stack
 
       - name: Build site
         env:
