--- a/package.json
+++ b/package.json
@@ -6,24 +6,40 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "notes": "eldev exec '(porg-run \"d12frosted.io\")'"
   },
   "dependencies": {
     "@headlessui/react": "^2.1.6",
     "@heroicons/react": "^2.1.3",
     "@icons-pack/react-simple-icons": "^11.1.0",
+    "@observablehq/plot": "^0.6.16",
     "clsx": "^2.1.1",
+    "d3": "^7.9.0",
     "framer-motion": "^11.2.6",
-    "next": "14.2.3",
+    "moment": "^2.30.1",
+    "next": "^15",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-markdown": "^9.0.3",
+    "react-syntax-highlighter": "^15.6.1",
+    "rehype-katex": "^7.0.1",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0",
+    "topojson-client": "^3.1.0",
+    "world-countries": "^5.0.0",
+    "yaml": "^2.7.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.0",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/d3": "^7.4.3",
+    "@types/geojson": "^7946.0.16",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
