--- a/src/public/content/posts/2017-06-11-Git-conditional-configurations.json
+++ b/src/public/content/posts/2017-06-11-Git-conditional-configurations.json
@@ -1,11 +1,11 @@
 {
-  "publish": null,
+  "publish": true,
   "hide": null,
   "pinned": null,
   "title": "Git: conditional configurations",
   "id": "6f51b4a0-ccc8-4b0a-ac39-111668610965",
   "related": null,
-  "update": "2025-01-28",
+  "update": "2025-01-30",
   "date": "2017-06-11",
   "authors": [
     "Boris Buliga"
