--- a/src/public/content/posts/2017-06-15-AppleScript-and-GitHub-API.json
+++ b/src/public/content/posts/2017-06-15-AppleScript-and-GitHub-API.json
@@ -1,11 +1,11 @@
 {
-  "publish": null,
+  "publish": true,
   "hide": null,
   "pinned": null,
   "title": "AppleScript and the GitHub API",
   "id": "76cb7bdd-d1a9-494f-a23c-7943cb1c0f61",
   "related": null,
-  "update": "2025-01-28",
+  "update": "2025-01-30",
   "date": "2017-06-15",
   "authors": [
     "Boris Buliga"
