--- a/src/public/content/posts/2021-04-26-emacs-project-management.json
+++ b/src/public/content/posts/2021-04-26-emacs-project-management.json
@@ -1,11 +1,11 @@
 {
-  "publish": null,
+  "publish": true,
   "hide": null,
   "pinned": null,
   "title": "Project management tool for Emacs packages",
   "id": "90510e72-bb9a-43c9-9953-31ba3df61aaa",
   "related": null,
-  "update": "2025-01-28",
+  "update": "2025-01-30",
   "date": "2021-04-26",
   "authors": [
     "Boris Buliga"
