--- a/src/public/content/posts/2017-06-15-AppleScript-and-GitHub-API.json
+++ b/src/public/content/posts/2017-06-15-AppleScript-and-GitHub-API.json
@@ -10,7 +10,7 @@
   "authors": [
     "Boris Buliga"
   ],
-  "description": "Using GitHub API from AppleScript",
+  "description": "Sharing my initial venture into AppleScript with a GitHub API client I wrote while building an OmniFocus integration. While it works for my needs - fetching GitHub issue details to create OmniFocus tasks - it's quite basic and has some limitations. The script supports simple authentication and data extraction, though it could be more efficient when fetching multiple values.",
   "tags": [
     "applescript"
   ]
