--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.1.3",
     "@icons-pack/react-simple-icons": "^11.1.0",
     "@observablehq/plot": "^0.6.16",
+    "@vercel/analytics": "^1.4.1",
     "clsx": "^2.1.1",
     "d3": "^7.9.0",
     "framer-motion": "^11.2.6",
