--- a/src/public/content/posts/2021-04-26-emacs-project-management.json
+++ b/src/public/content/posts/2021-04-26-emacs-project-management.json
@@ -10,7 +10,7 @@
   "authors": [
     "Boris Buliga"
   ],
-  "description": "I'm sharing my experience and observations about build tools for Emacs packages. While makem.sh is wonderfully simple and cask is a robust classic, I've found eldev's extensibility and native Emacs Lisp implementation particularly useful. The choice really depends on your needs - makem.sh is great for simpler projects, but when you need more customization, tools like eldev or cask become more attractive.",
+  "description": "Comparing build tools for Emacs packages—makem.sh for simplicity, cask for robustness, and eldev for extensibility—with observations on when each tool suits different project needs.",
   "tags": [
     "emacs"
   ]
