--- a/src/public/content/posts/2025-12-08-knowing-less-producing-more.json
+++ b/src/public/content/posts/2025-12-08-knowing-less-producing-more.json
@@ -1,7 +1,7 @@
 {
   "publish": true,
   "hide": null,
-  "pinned": null,
+  "pinned": true,
   "title": "Knowing Less, Producing More",
   "id": "5e8dbd1f-1120-4089-8c6a-3971b16bebf3",
   "related": null,
