--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vercel/analytics": "^1.4.1",
     "clsx": "^2.1.1",
     "d3": "^7.9.0",
+    "feed": "^5.2.0",
     "framer-motion": "^11.2.6",
     "moment": "^2.30.1",
     "next": "^15.5.9",
