--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "d3": "^7.9.0",
     "feed": "^5.2.0",
     "framer-motion": "^11.2.6",
+    "marked": "^17.0.1",
     "moment": "^2.30.1",
     "next": "^15.5.9",
     "react": "^18",
